--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <button onclick="onClick()">CALCULATE FARE</button>
     <br>
 
-    <output id="output"></output>
+    Rs.<output id="output"></output>
     <script src="/DMRC/index.js"></script>
 
 
